--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,13 @@ moc_*.cpp
 qrc_*.cpp
 Makefile
 *-build-*
+/bin
+
+# To JavaCC
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+RubyLikeJavaCC/bin/
