--- a/RubyLikeJavaCC/.settings/sf.eclipse.javacc.prefs
+++ b/RubyLikeJavaCC/.settings/sf.eclipse.javacc.prefs
@@ -5,7 +5,7 @@ JJTREE_OPTIONS=
 JJ_NATURE=true
 JTB_OPTIONS=
 MARK_GEN_FILES_AS_DERIVED=true
-RUNTIME_JJJAR=/home/hismahil/eclipse/plugins/sf.eclipse.javacc_1.5.27/javacc.jar
-RUNTIME_JTBJAR=/home/hismahil/eclipse/plugins/sf.eclipse.javacc_1.5.27/jtb-1.4.7.jar
+RUNTIME_JJJAR=C\:\\Users\\hismahil.epd\\Documents\\eclipse\\plugins\\sf.eclipse.javacc_1.5.27\\javacc.jar
+RUNTIME_JTBJAR=C\:\\Users\\hismahil.epd\\Documents\\eclipse\\plugins\\sf.eclipse.javacc_1.5.27\\jtb-1.4.7.jar
 SUPPRESS_WARNINGS=false
 eclipse.preferences.version=1
